--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
       let tax = getTax();
       let tip = getTip();
 
-
       let subTotal = entree1 + entree2 + entree3
       subTotal = Math.round(subTotal * 100) / 100
       let printSubTotal = `Entree 1: ${entree1} + Entree 2: ${entree2} + Entree 3: ${entree3} = Subtotal: ${subTotal}`;
@@ -109,11 +108,11 @@
     }
     function getTip() {
       if (document.getElementById('10')) {
-        return .1
+        return 10
       } else if (document.getElementById('15')) {
-        return .15
+        return 15
       } else if (document.getElementById('20')) {
-        return .20
+        return 20
       }
     }
     let output = document.querySelector('p');
